@@ -11,4 +11,4 @@ REQUIRED_USE=|| ( python_targets_python2_7 )
 SLOT=0
 SRC_URI=https://github.com/Bitmessage/PyBitmessage/archive/v0.4.0.tar.gz -> pybitmessage-0.4.0.tar.gz
 _eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	gnome2-utils	b66c7c3889d2dd0913e9f3d2ac1c0859	multibuild	56d4120419072116417e8de1bd1040ff	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	python-r1	2876e182a9a350a7e0049caf3bf3be12	python-utils-r1	a4940acdd0a5ebdc58aaedd38de4983a	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=12e0f923d6a807bb9db85d335b7c713b
+_md5_=7cf65af50136b93e7440e91f22ebd229
