@@ -2,18 +2,18 @@
 Hash: SHA256
 
 DIST pybitmessage-0.4.0.tar.gz 408390 SHA256 039a2e6886932beded89cd9417652b588511e0d1313d89b833d440e2cb06cfec SHA512 fe4739a84db85b9a3f06f7fb9f79e1ad8c2f3158544b1fb47ac7d41e9d1e3918efa756012d898910e135f89ac0cf1b2d38f1c1b0e2c3fc2595304365ee2be63d WHIRLPOOL 9628b6cc7f70ac7f571b6542e0625d13b0ebee85690f7d22500921b1097a28ccc7ee10e01a1a961ce482e278544f75f5d5055d60fc983f6581c416c2d85b0ca5
-EBUILD pybitmessage-0.4.0.ebuild 1667 SHA256 ff797adad3490b496467fd7880ea215a6bc6f570545737f04a9473b57d8cbaeb SHA512 81bdb8d8fbd64cf977191756ce1d6227d8a15e3242925e9fc9c70a005f398c4ec21385cb38ca29ac364ef8fc40ee4eac009102f242e0574761b47558bf40fe35 WHIRLPOOL 11dd8419ed96fb8d3a972f36e5339a1a74c8c708783f9a46d7dc686e5a262d1c507350d886012e048441d6e4bd4b311b1d79fe32e5c34653762558767ac34774
+EBUILD pybitmessage-0.4.0.ebuild 1622 SHA256 32e57a20cf57b092e8cf18db877e960785c69434dc834b42f2e168ae5e1b0cb1 SHA512 79858213aea7143444114d085853c47943f729f49d301897dea5a7b49a5b5e6f6c81430cb19a5fccf7438436e950cc0f433e23e763a09719910b163b5f2035c9 WHIRLPOOL ecfe94dc3e045475dd1de1c84266928c440166b5f734684a34ad514be14811800648b25ca5ca2948ac9086e956ed1a4371f8e40e1e0a9e2fa4c0d21ca966b941
 EBUILD pybitmessage-9999.ebuild 1601 SHA256 32a3b5207a483d3a00290a13a3e564f583e7d63e1331ddd65ed66c40938369e6 SHA512 7a9349d41318e7ecafae6787f61dec6cd9018e00fa41b3a2b836efbc55e561bf1d749cd342667550857443ccd634e28a0a7ae7aa1bedc879e982b07509954f32 WHIRLPOOL 40ceb6d0d13fb1778c4df2103c0880ad178a70c93ef3989d73d63431be9d62ccd7f499dbfc7043e2b4c7ae6200b4b7da034e9568a18e34eb1c7da197d1d02989
-MISC ChangeLog 753 SHA256 0efbd1b2352796463df6c02585670086e4f7576de5dcf553dc5ba8b42ae59c2c SHA512 2921567324277eabc88c2a2b9eef44de5365506d7eadd950bf62efba0f47975e18fc60b16629dbc710c65966c8ab7e51d1d864e23e072b733573ab0be16a4911 WHIRLPOOL ac82d753242512f8f7d884a45e686334fef19e0e9f812315803ee8b1436a45e0b03f4657991e68202023c1f475a78794f517502e2aaf0e8dbbc66583835952eb
+MISC ChangeLog 874 SHA256 48c2252b7ada56ba807b85432dc8bb79208951c0f4df33865465abae2f67f303 SHA512 b086843f215f35d7942cd5ce44478d67431dfd3e9f2bbadcd736c86d50eba1b0ac7680c7810f4c40ed58133b3db68aaeff3434aa2884859d5cdf2c3eac3670d9 WHIRLPOOL 0069a959cc7d02dfd2790564e4128fd75ba0bc2c42cfea12b46e9a4a8e62c493c2079b6142e1400033e49dd6799001feacef14b73090388e0e784b91b36d4170
 MISC metadata.xml 1037 SHA256 ea96c7f0d68f1ec7a97f4d98f400faad468d406a095006dedef7b7fe6ced005e SHA512 782139c3fa432bcb44554b28ad90a14dfbc3cf1eecd3076a18e493178d9dd8287c467469fa578953ddc4401ecf1429548d00832b40225c77bea88498f696a1c7 WHIRLPOOL bc3f953abc4627fd232b0dc5814fa2f77bca8a7e8cb4c7ebc9f2ae6729fab4e054e9a9bd6eb16c63a27bb05fb929f910abd99f678123fa5705cf2ed54ca81fa0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSQt2NAAoJEFpvPKfnPDWzAWcIAItQ7b4bn2JWJ80j5eWTG1Hh
-Ok1bWMirkA9qOFhiQUSYZpKYSAjHi1d/07/9gjDzZ8jrAMZqq7k4hBN5IZ0bDRF1
-sveiHksvGyZgzLCp0XLB6VRQcBW5LxfoFSH1FrX0tiOM4za6UTtboWYXHYk0iS8b
-7FRTXP+sWqhH3GTLjNnWcviZS5wS0kOszBs180X9+3c0CpIoSaqgDJAb4k/Gy8kF
-l56SM3+fE61F4pnyN177bcLw+DRcTU4Iwtl9TUA/iS/ljywPPHYs+o+RcIqK/PHV
-XI0UHinxDX3fUabAyzsGjvRqCVMSS8ED0VprEeqpoGcBMHnRvAKuoWwFlmz2mio=
-=F5VV
+iQEcBAEBCAAGBQJSQupAAAoJEFpvPKfnPDWzYAwIALLAbpPlkEHc2rKAfkzyU5j6
+Qv0K8fr4IW5A3o+So/5FwR05PbNnGFDz/OY3WF8j52WIZBOi8+XjnZWXYCX03NZO
+Dnq6CTkve+9Wl45ZCWb98NZgJVuhn9hBY8aQKJ3V67qdzJfqWRu34oFStNOy6mDE
+77ZxkDwPZpp1M3SBimIaEMJPt/Hv3d3EijkjbYg42HUH/C3uyWo8//py05eHjw78
+OaAGynKeVGSB2/6SuQX3E7gi5aOi2dCONoto8DfLWdlDRppQqKDzz5t3nZj2xqth
+dpvuv1roM6vdYwB7hzbHaQNN4j5G7jV9Ie1vya9+6JLUDeCQiWK/utAaaT466aM=
+=Qk0o
 -----END PGP SIGNATURE-----
